<resources>
    <string name="app_name">Club Deportivo</string>
    <string name="reserva_de_actividades">RESERVA DE ACTIVIDADES</string>
    <string name="regresar">Regresar</string>
    <string name="ingrese_dni">Ingrese DNI</string>
    <string name="ingrese_actividad">Ingrese actividad</string>
    <string name="paso_1">1</string>
    <string name="paso_2">2</string>
    <string name="paso_3">3</string>
    <string name="paso_4">4</string>
    <string name="paso_5">5</string>
    <string name="reserva_actividades">Reserva de actividades</string>
    <string name="vencimientos">Vencimientos</string>
    <string name="impresion_carnet">Impresión de carnet</string>
    <string name="registro_clientes">REGISTRO CLIENTE</string>
    <string name="busqueda_dni_cliente">Búsqueda DNI cliente</string>
    <string name="buscar">Buscar</string>
    <string name="continuar">Continuar</string>
    <string name="validacion_cliente">Verificación cliente</string>
    <string name="busqueda_actividad">Búsqueda de actividades de interes</string>
    <string name="numero_dni">DNI:</string>
    <string name="nombre">Nombre:</string>
    <string name="tipo_cliente">Tipo cliente:</string>
    <string name="apto_fisico">Apto Físico:</string>
    <string name="seleccione_una_fecha">Seleccione una fecha</string>
    <string name="actividad">Actividad:</string>
    <string name="cuota_nro">Seleccione cuota:</string>
    <string name="registro_exitoso_cliente">Registro exitoso de CLIENTE</string>
    <string name="registro_exitoso">Registro Exitoso</string>
    <string name="volver">Volver</string>
    <string name="datos_socio">Datos socio</string>
    <string name="monto_cuota">Monto cuota:</string>
    <string name="ingrese_monto">Ingrese monto</string>
    <string name="imprimir">IMPRIMIR</string>
    <string name="cliente_acepta_contrato">¿Cliente acepta el contrato?</string>
    <string name="si">SÍ</string>
    <string name="no">NO</string>
    <string name="contrato_aceptado_por_el_cliente">Contrato aceptado\npor el cliente!</string>
    <string name="contrato_no_aceptado_por_el_cliente">Contrato NO ha sido aceptado\npor el cliente!</string>
    <string name="comprobante_reserva">Comprobante de Reserva</string>
    <string name="id_reserva">ID Reserva:</string>
    <string name="enviar">Enviar</string>
    <string name="seleccione_una_hora">Seleccione una hora</string>
    <string name="seleccione_un_dia">Seleccione un día</string>
    <string name="reservar">Reservar</string>
    <string name="enviar">Enviar</string>
    <string name="comprobante_reserva">COMPROBANTE RESERVA</string>
    <string name="id_reserva">ID Reserva:</string>
    <string name="id_pago">ID Pago:</string>
    <string name="verificacion_reserva">Verificación Reserva</string>
    <string name="no_paga">No pagaré</string>
    <string name="paga">Pagaré ahora</string>
    <string name="aceptar">Aceptar</string>
    <string name="ingrese_num_cuenta">Ingrese número cuenta</string>
    <string name="ingrese_banco">Ingrese banco</string>
    <string name="metodo_pago">Método Pago:</string>
    <string name="comprobante_pago">COMPROBANTE PAGO</string>

    <string name="mensaje_pago">Puede pagar al momento de reservar o el mismo día de la actividad ¿Desea pagar la actividad reservada?</string>
    <string name="recordatorio">Debe llegar al menos 15 minutos antes del inicio de la actividad para cancelar el importe</string>
    <string name="logo">Logo</string>
    <string name="fecha">Fecha:</string>
    <string name="horario">Horario:</string>
    <string name="lugar">Lugar:</string>
    <string name="valor">Valor:</string>
    <string name="volver">Volver</string>
    <string name="formalizacion_de_pago">Formalización de pago</string>
    <string name="titular">Titular:</string>
    <string name="banco">Banco:</string>
    <string name="num_cuenta">N°Cta:</string>
    <string name="num_cuotas">N° Cuotas:</string>
    <string name="tipo_cuenta">Tipo Cta:</string>
    <string name="fecha_exp">Fecha exp.</string>
    <string name="cvv">CVV</string>
    <string name="pagar">PAGAR</string>
    <string name="ingrese_titular">Ingrese titular</string>
    <string name="ingrese_tipo_cuenta">Ingrese tipo cuenta</string>
    <string name="seleccione_opcion">Seleccione opción</string>

    <string-array name="actividades">
        <item>Natación</item>
        <item>Tenis</item>
        <item>Fútbol</item>
        <item>Acondicionamiento</item>
        <item>Yoga</item>
        <item>Karate</item>
    </string-array>

    <string-array name="metodos_pago">
        <item>Efectivo</item>
        <item>Transferencia</item>
        <item>Tarjeta Crédito</item>
        <item>Tarjeta Débito</item>
        <item>MercadoPago</item>
    </string-array>

    <string-array name="cuotas">
        <item>1</item>
        <item>3</item>
        <item>6</item>
        <item>12</item>
    </string-array>

    <string-array name="bancos">
        <item>1</item>
        <item>3</item>
        <item>6</item>
        <item>12</item>
    </string-array>
    <string name="seleccione_opcion">Seleccione opción</string>
    <string name="formalizacion_de_pago">Formalización de pago</string>
    <string name="comprobante_pago">COMPROBANTE PAGO</string>
    <string name="id_pago">ID Pago:</string>
    <string name="metodo_pago">Método Pago:</string>
    <string name="titular">Titular:</string>
    <string name="banco">Banco:</string>
    <string name="num_cuenta">N°Cta:</string>
    <string name="num_cuotas">N° Cuotas:</string>
    <string name="tipo_cuenta">Tipo Cta:</string>
    <string name="fecha_exp">Fecha exp.</string>
    <string name="cvv">CVV</string>
    <string name="pagar">PAGAR</string>

    <string-array name="actividades">
        <item>Natación</item>
        <item>Tenis</item>
        <item>Fútbol</item>
        <item>Acondicionamiento</item>
        <item>Yoga</item>
        <item>Karate</item>
    </string-array>

    <string-array name="metodos_pago">
        <item>Efectivo</item>
        <item>Transferencia</item>
        <item>Tarjeta Crédito</item>
        <item>Tarjeta Débito</item>
        <item>MercadoPago</item>
    </string-array>

    <string-array name="cuotas">
        <item>1</item>
        <item>3</item>
        <item>6</item>
        <item>12</item>
    </string-array>

    <string-array name="bancos">
        <item>1</item>
        <item>3</item>
        <item>6</item>
        <item>12</item>
    </string-array>
</resources>