<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvActividad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="6dp"
            android:text="@string/actividad"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPrintActividad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="6dp"
            android:layout_marginStart="10dp"
            android:text="Fútbol"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/seleccione_una_fecha"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:hint="@string/seleccione_un_dia"
        android:clickable="false"
        android:focusable="false"/>

    <Button
        android:id="@+id/btnContinuar"
        android:layout_width="184dp"
        android:layout_height="58dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        app:cornerRadius="5dp"
        android:backgroundTint="@color/color_boton_principal"
        android:text="@string/continuar"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>

</LinearLayout>