<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">


    <!-- Tarjeta de Verificación Cliente -->
    <LinearLayout
        android:id="@+id/cardContainerValidacion"
        android:layout_width="300dp"
        android:layout_height="420dp"
        android:layout_gravity="center"
        android:background="@drawable/card_background"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validacion_cliente"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/numero_dni"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPrintDni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="10dp"
                android:text="24.753.731"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/nombre"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPrintNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="10dp"

                android:text="Andrea Jiménez"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTipoCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/tipo_cliente"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPrintTipoCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="10dp"

                android:text="No socio"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvAptoF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/apto_fisico"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPrintAptoF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="10dp"
                android:text="Sí"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnVolver"
                android:layout_width="128dp"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/color_boton_principal2"
                android:text="@string/volver"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/btnContinuar"
                android:layout_width="128dp"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/color_boton_principal"
                android:text="@string/continuar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="5dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>