<?xml version="1.0" encoding="utf-8"?>
<!-- Barra de progreso/Pasos -->
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/step_bar_reserva"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Línea conectora de fondo -->
    <View
        android:id="@+id/lineConnector"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/color_boton_principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/step5"
        app:layout_constraintStart_toStartOf="@+id/step1"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Paso 1 -->
    <TextView
        android:id="@+id/step1"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:background="@drawable/circle_teal"
        android:gravity="center"
        android:text="@string/paso_1"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Paso 2 -->
    <TextView
        android:id="@+id/step2"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:background="@drawable/circle_grey"
        android:gravity="center"
        android:text="@string/paso_2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/step3"
        app:layout_constraintStart_toEndOf="@+id/step1"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Paso 3 -->
    <TextView
        android:id="@+id/step3"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:background="@drawable/circle_grey"
        android:gravity="center"
        android:text="@string/paso_3"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/step4"
        app:layout_constraintStart_toEndOf="@+id/step2"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Paso 4 -->
    <TextView
        android:id="@+id/step4"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:background="@drawable/circle_grey"
        android:gravity="center"
        android:text="@string/paso_4"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/step3"
        app:layout_constraintStart_toEndOf="@+id/step5"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Paso 5 -->
    <TextView
        android:id="@+id/step5"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:background="@drawable/circle_grey"
        android:gravity="center"
        android:text="5"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>