<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/busqueda_dni_cliente"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/cardContainer"
        android:layout_width="320dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_back_without_radius"
        android:backgroundTint="@color/naranja"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <EditText
            android:id="@+id/edtDni"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="220dp"
            android:layout_height="48dp"
            android:background="@color/background_app"
            android:hint="@string/ingrese_dni"
            android:paddingStart="12dp"
            app:errorEnabled="false" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/red"
        android:textSize="13sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="184dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/color_boton_principal"
        android:text="@string/buscar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="5dp" />
</LinearLayout>
